--- a/vagrant_docker/Vagrantfile
+++ b/vagrant_docker/Vagrantfile
@@ -31,6 +31,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision :docker
   config.vm.provision :docker_compose
   
+  config.vm.network :forwarded_port, guest: 80, host: 8080
   config.vm.network :forwarded_port, guest: 8181, host: 8181
   config.vm.network :forwarded_port, guest: 8081, host: 8081
   config.vm.network :forwarded_port, guest: 9000, host: 9000
@@ -40,6 +41,7 @@ Vagrant.configure("2") do |config|
     vb.customize ["modifyvm", :id, "--ioapic", "on"]
     vb.customize ["modifyvm", :id, "--memory", "8192"]
     vb.customize ["modifyvm", :id, "--cpus", "4"]
+    vb.gui = true
    config.vm.synced_folder ".", "/home/vagrant/Mapping", type:"virtualbox"
   end
 
