fixed pom.xml and Dockerfile

--- a/Draco/Example/example-idscp/Java_Server/Dockerfile
+++ b/Draco/Example/example-idscp/Java_Server/Dockerfile
@@ -4,6 +4,8 @@ RUN apt-get install -y maven
 COPY pom.xml /app/
 COPY src /app/src
 WORKDIR /app
+
 RUN mvn package
-RUN javac src/Server.java
-CMD ["java", "Server"]
+#RUN javac src/Server.java
+RUN mvn clean install
+CMD ["java" -jar, "Server"]
