--- a/vagrant_docker/TC_Example/example-idscp/docker-compose-ttp.yaml
+++ b/vagrant_docker/TC_Example/example-idscp/docker-compose-ttp.yaml
@@ -4,9 +4,9 @@ services:
   # TPM trusted third party (RAT repository)
   ids-ttpsim:
     image: fraunhoferaisec/ttpsim:${EXAMPLE_TAG:-develop}
-    # Enable this port mapping to access TTP from outside the ids-wide network
-#    ports:
-#      - "31337:31337"
+    #Enable this port mapping to access TTP from outside the ids-wide network
+    ports:
+      - "31337:31337"
     networks:
       ids-wide:
         aliases:
